2008-04-30:
development cycle 1.13.x opened
Added xcmsRaw CDF export contributed by Peter.Watkins at Food Science Australia (FSA)
Fixed image(xcmsRaw)

2008-04-28:
Resurrection of 1.11.18 as 1.11.21

2008-04-11: 
Final commit as 1.11.18 as announced on 
http://groups.google.com/group/xcms-devel/browse_thread/thread/bd8e6e19303b0cb2
Well be resurrected on 2008-04-29 as 1.13.1

2008-04-08:
Move mzClust helper functions into own file
mzClustGeneric can now align arbitrary matrices/spectra, 
not just within xcmsSet.

2008-04-02:
Fix duplicate setGeneric() which fails on R-2.7a
Fix BinLinBase which had an uninitialised argument in .Call()

2008-03-14: 
xcmsFragments cleanup and documentation, 
now causing fewer R CMD check warnings
added Rgraphviz to suggests, for MSn tree Plotting

2008-03-12: 
removed warning() in findPeaks.MS1() which caused a memory explosion ;-)

2008-02-25: 1.11.15
added fillPeaks.mean
findPeaks.centWave: generates a warning if data seems to be not in centroid mode 
remove global variables in .group.mzClust
fix sampclass if all directories are "redundant"

several small fixes towards Pipelining
Fix in plot(eic) for xcmsEIC with absent groups

2008-01-15: 1.11.13
added xcmsFragments Class for handling of Tandem MS / MS^n
renamed hra_clust stuff to mzClust

2008-01-15: 1.11.13
Revised pipeline framework. Documentation forthcoming.
Added hra_clust for m/z alignment to xcmsSet
Added getMsnScan to xcmsRaw for Tandem MS / Ion Trap data

2007-12-28: 1.11.12
findPeaks.centWave: speedup for m/z ROI search

2007-12-07: 1.11.11
xcmsSet.R: Initial import of single-Spectra Alignment group.mzAlign
xcmsPipeline.R:perform(): Fixed handling of character parameters in xcmsPipeline
xcmsSet(): Fixed a typo in mzData Filepattern
utils.R:uncapitalize(): No CamelCaps for all-caps e.g. ABBRV

2007-12-06: 1.11.10
Fixed a bug in findPeaks.centWave: NaN was assigned as peak intensity in some rare cases

2007-12-05: 1.11.9
Added mzData precursorIntensity parsing