@@ -1,3 +1,6 @@
+2008-05-02:
+Migrate to ncdf for xcmsRaw.write()
+
 2008-04-30:
 development cycle 1.13.x opened
 Added xcmsRaw CDF export contributed by Peter.Watkins at Food Science Australia (FSA)
